syntax = "proto3";

package comment;

option go_package = "./pb";

service CommentRpc {
    rpc AddComment (AddCommentRequest) returns (AddCommentResponse) {}
    rpc DelComment (DelCommentRequest) returns (DelCommentResponse) {}
    rpc GetCommentList (GetCommentListRequest) returns (GetCommentListResponse) {}
    rpc GetCommentDetail (GetCommentDetailRequest) returns (GetCommentDetailResponse) {}
    rpc GetCommentCount (GetCommentCountRequest) returns (GetCommentCountResponse) {}
}

message GetCommentDetailRequest {
    int64 comment_id = 1;
    int64 user_id = 2;
}

message GetCommentDetailResponse {
    repeated Comment comment_list = 1;
}

message AddCommentRequest {
    int64 video_id = 1;
    string content = 2;
    int64 user_id = 3;
    int64 parent_id = 4;
}

message AddCommentResponse {
    Comment comment = 1;
}

message DelCommentRequest {
    int64 comment_id = 1;
    int64 video_id = 2;
}

message DelCommentResponse {
}

message Comment {
    int64 id = 1;
    int64 video_id = 2;
    User user = 3;
    string content = 4;
    int64 create_time = 5;
    int64 sub_count = 6;
    int64 parent_id = 7;
}


message User {
    int64 id = 1;
    string name = 2;
    int64 follow_count = 3;
    int64 follower_count = 4;
    bool is_follow = 5;
    string avatar = 6;
    string background_image = 7;
    string signature = 8;
    int64 total_favorited = 9;
    int64 work_count = 10;
    int64 favorite_count = 11;
}

message GetCommentListRequest {
    int64 video_id = 1;
    int64 last_comment_id=2;
    int64 user_id = 3;
}

message GetCommentListResponse {
    repeated Comment comment_list = 1;
}

message GetCommentCountRequest {
    int64 video_id = 1;
}

message GetCommentCountResponse {
    int64 count = 1;
}
